add event details
